--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 சென்றாயே உனக்கே ஓா் தொட்டில்
 கட்டி நானே தாயாய் மாறிட வேண்டும்</h1>
 <hr>
-<img src="images\11.jpg" class="asdsadq3r43241414V" alt="cake-image" >
+<img src="images\11.jpg" class="asdsadq3r43241414" alt="cake-image" >
 <h1>❤❤❤❤❤❤❤❤❤❤</h1><h1>பிறந்த நாள் வாழ்த்துக்கள் அம்மா. எனக்காக நீங்கள் செய்த அனைத்திற்கும் நன்றி.</h1>
 <h1>❤❤❤❤❤❤❤❤❤❤</h1><hr>
 
